Admin DJ, Menu ppal (about, base, home), Consultas

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -12,7 +12,7 @@
           <div class="row no-gutters">
             <div class="content col-xl-5 d-flex align-items-stretch">
               <div class="content">
-                <h3>Te busco, te encuentr<span><small><i class="icofont-heart"></i></small></span>.</h3>
+                <h3>Te busco, te encuentr <span><small><i class="icofont-heart"></i></small></span>.</h3>
                 <p>
                   Este es un lugar donde podés publicar una mascota que perdiste, que encontraste, o que querés dar en adopción.
                 </p>
@@ -121,7 +121,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Equipo</h2>
+            <h2>Nosotros</h2>
             <p>Nosotros somos los creadores de la página.</p>
           </div>
   
