--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -22,6 +22,9 @@
       </div>
     </div>
 
+
+
+
   </section><!-- End Hero -->
 
   <main id="main">
@@ -36,7 +39,7 @@
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
+              <p>Mascotas Felices</p>
             </div>
           </div>
 
@@ -44,7 +47,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <p>Usuarios Felices</p>
             </div>
           </div>
 
@@ -52,7 +55,7 @@
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <p>Horas de Soporte</p>
             </div>
           </div>
 
@@ -60,22 +63,26 @@
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hard Workers</p>
+              <p>Horas Trababjadas</p>
             </div>
           </div>
 
         </div>
-
       </div>
     </section><!-- End Counts Section -->
+
+
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Mascotas</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+          <h2>Amada Mascota</h2>
+          <p> Primer paso: registrarse como usuario (Iniciar). <br> 
+            Segundo paso: realizar una publicación en: ¿Perdiste?, ¿Encontraste? o ¿Adopciones?. 
+            Revisar la sección de ¿Adotar? si se quiere adoptar una mascota. <br>
+            Por último: ¡Suscríbete! a uno de los tres tipos de publicaciones.</p>
         </div>
 
         <div class="row">
@@ -83,14 +90,14 @@
           <div class="col-lg-4 col-md-6">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>¿Perdiste?</h3>
-              <div class="btn-wrap">
+              <div class="btn-wrap">  
                 <a href="#" class="btn-buy">Postear</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="fade-up" data-aos-delay="200">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>¿Encontraste?</h3>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Postear</a>
@@ -99,111 +106,40 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-            <div class="box featured" data-aos="fade-up" data-aos-delay="300">
-              <h3>¡Adoptá!</h3>
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
+              <h3>¿Adopciones?</h3>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Postear</a>
+              </div>
+            </div>
+          </div>
+
+         
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-5">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
+              <h3>¿Adoptar?</h3>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Ver mascotas</a>
               </div>
             </div>
           </div>
 
+         
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-5">
+            <div class="box featured" data-aos="fade-up" data-aos-delay="100">
+              <h3>¡Suscríbete!</h3>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Suscirbirse</a>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
       </div>
     </section><!-- End Pricing Section -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Testimonios</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
-        </div>
-
-        <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="{% static 'img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="{% static 'img/testimonials/testimonials-2.jpg' %}" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="{% static 'img/testimonials/testimonials-3.jpg' %}" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="{% static 'img/testimonials/testimonials-4.jpg' %}" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
-                  <img src="{% static 'img/testimonials/testimonials-5.jpg' %}" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat esse veniam culpa fore nisi cillum quid.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
 
