--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -56,7 +56,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Preguntas Frecuentes</h2>
+            <h2><br> Preguntas Frecuentes</h2>
           </div>
   
           <ul class="faq-list accordion" data-aos="fade-up">
@@ -248,7 +248,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Contacto</h2>
+            <h2><br>Contáctanos</h2>
             <p></p>
           </div>
           <!--
