--- a/main/templates/consultas_encontrados.html
+++ b/main/templates/consultas_encontrados.html
@@ -18,10 +18,10 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
             <h2>Consulta de Encontrados</h2>
-            <p>Selecciones un NOMBRE para ver mas detalles.</p>
+            <p>Estas mascotas se encuentran sin Dueño, si las conoces, por favor avisá al dueño.</p>
         </div>
       <div class="row">
-  
+        {% if lista_encontrados %} 
       {% for xObj in lista_encontrados %}
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
           <div class="member" data-aos="fade-up" data-aos-delay="10">
@@ -38,6 +38,10 @@
           </div>
         </div>
       {% endfor %}
+      {%else%}
+          <h4>No hay Publicaciones de Encontrados</h4>
+          <p>Disculpe las molestias.</p>
+      {%endif%}
 
     </section><!-- End Section -->
 
