--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6  {
   font-family: "Raleway", sans-serif;
 }
 
@@ -2139,3 +2139,15 @@ section {
   padding-top: 5px;
   font-size: 13px;
 }
+
+/*--------------------------------------------------------------
+# foto de consultas - magui
+--------------------------------------------------------------*/
+.foto1 { 
+  padding: 5px; 
+  margin: 5px; 
+  border: 2px solid black; 
+  max-width: 165px;
+  position: relative;
+  overflow: hidden;
+  }
