--- a/apps/encontrados/templates/publicar.html
+++ b/apps/encontrados/templates/publicar.html
@@ -4,10 +4,9 @@
 
 {% block content %}
 
-<!-- {% if user.is_authenticated %} -->
+<br>
+<br>
    <section>
-      <br>
-      <br>
       <h5 style="text-align: left; font: 900 32px bold;padding: 0.5em 0; padding-left: 2em; background-color: #1b1b1b; color: #fff; margin: 0;">Publicar</h5>
       <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
          ¡Nosotros te ayudamos a encontrar a su familia!
@@ -27,6 +26,7 @@
          </div>
       </div>
    </section>
-<!-- {% endif %} -->
 
 {% endblock %}
+
+<input type="number" name="" id="" max="">
