--- a/apps/adopcion/templates/historial_adopciones.html
+++ b/apps/adopcion/templates/historial_adopciones.html
@@ -1,23 +1,46 @@
 {% extends 'base.html' %}
 
-{% block title %} Adopciones realizadas{% endblock %}
+{% block title %} Adopciones{% endblock %}
 
 {% block content %}
 <div class="main" style="padding-top: 3em;padding-bottom: 0px;">
     <section class="sign-in" style="padding-bottom: 2em; padding-left: 2em; padding-right: 2em;margin-bottom: 0px;" >
         <div class="containerr w-100 p-4 " >
-            <div class="signin-content" style="padding-top: 1em;padding-bottom: 1em;">
-                <tbody>
-                    <!-- ESTO ESTA DE FORMA PROVISIONAL PARA PROBAR-->
-                    {% for i in adopciones_lista %}
-                    <tr>
-                        <td>{{ i.id }}</td>
-                    </tr>
+            <div class="table-responsive" style="padding-top: 1em;padding-bottom: 1em;">
+                <h1>Historial de adopciones</h1>
+                <table class="table table-hover">
+                    <thead>
+                        <tr >
+                            <td >Mascota</td>
+                            <td>Ubicacion</td>
+                            <td>Fecha publicacion</td>
+                            <td>Foto</td>
+                            <td>observaciones</td>
+                            <td>Operar</td>
+                        <tr>
+                    </thead>
+                    <tbody>
+                    {% if object_list %}
+                    {% for i in object_list %}
+                        <tr>
+                            
+                            <td>{{ i.id_mascota }}</td>
+                            <td>{{ i.condicion }}</td>
+                            <td>{{ i.fecha_publicacion }}</td>
+                            <td><img  style="height: 8em; width: 10em;" src="{{  i.id_mascota.fotos.url }}"/></td>
+                            <td>{{ i.observaciones }}</td>
+                            <td>
+                                <a class="btn btn-primary" href="{% url 'adopcion:adopcion_eliminar' i.id %}">Eliminar</a>
+                                <a class="btn btn-primary" href="{% url 'adopcion:adopcion_editar' i.id %}">Editar</a>
+                            </td>
+
+                        </tr>
                     {% endfor %}
-                    
-                    <h1>No hay adopciones</h1>
-                    
-                </tbody>
+                    {% else %}
+                    <h1>No hay registros de adopciones</h1>
+                    {% endif %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
