Estilos a todas las paginas de encontrados

--- a/apps/encontrados/templates/editar_publicacion.html
+++ b/apps/encontrados/templates/editar_publicacion.html
@@ -13,7 +13,7 @@
 <div style="text-align: center; background-color: #1b1b1b; color: #fff; min-height: 50px;  padding: 0;">
    ¡Recurda estar pendiente de tus publicaciones!
 </div>
-<section style="background-color: #faeded; padding: 1em 0;">
+<section style="background-color: #faeded; padding: 60px 0;">
    <div class="container" style="width: 50%; border-radius: 20px; padding: 20px 15px; background-color: #fff; box-shadow: 0 0 5px;">
       <div class="abs-center">
          <form method="POST" class="p-3 form abs-center" enctype="multipart/form-data">
