alta de adopcion funcional

--- a/apps/adopcion/templates/crear_adopcion.html
+++ b/apps/adopcion/templates/crear_adopcion.html
@@ -22,7 +22,7 @@
                     <h2>Mascota</h2>
                     {{form3.as_p}}
                     <div style="display: flex; justify-content: center; gap: 5px">
-                        <a href="{% url 'adopcion:adopciones_listar' %}" class="btn btn-dark">Cancelar</a>
+                        <a href="{% url 'adopcion:inicio' %}" class="btn btn-dark">Cancelar</a>
                         <button type="submit" class="btn get-started-btn">Publicar</button>
                      </div>
                 </form>
