--- a/apps/adopcion/templates/index.html
+++ b/apps/adopcion/templates/index.html
@@ -16,7 +16,7 @@
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
               <h3>Buscar</h3>
               <div class="btn-wrap">
-                <a href="crear_adopcion.html" class="btn-buy">Buscar</a>
+                <a href=""class="btn-buy">Buscar</a>
               </div>
             </div>
           </div>
@@ -25,7 +25,7 @@
             <div class="box featured" data-aos="fade-up" data-aos-delay="200">
               <h3>Crear </h3>
               <div class="btn-wrap">
-                <a href="buscar_adopcion.html" class="btn-buy">Postear</a>
+                <a href="{% url 'adopcion:adopcion_crear' %}" class="btn-buy">Postear</a>
               </div>
             </div>
           </div>
