--- a/apps/adopcion/templates/adopcion_eliminar.html
+++ b/apps/adopcion/templates/adopcion_eliminar.html
@@ -3,8 +3,8 @@
 {% block title %} Adopciones realizadas{% endblock %}
 
 {% block content %}
-<div class="container h-100 p-5">
-    <div class="row justify-content-center h-100">
+<div class="container h-100  p-5">
+    <div class="row justify-content-center h-100 p-5">
         <div class="col-sm-6 align-self-center text-center">
             <div class="card shadow">
                 <div class="card-body">           
