--- a/apps/adopcion/templates/historial_adopciones.html
+++ b/apps/adopcion/templates/historial_adopciones.html
@@ -3,17 +3,17 @@
 {% block title %} Adopciones{% endblock %}
 
 {% block content %}
-<div class="main">
-        <div class="container w-100 p-4" >
+<div class="main w-100" style="padding-top:40px;">
+        <div class="container w-100 p-5">
             <div class="table-responsive">
                 <h1>Historial de adopciones</h1>
                 <table class="table table-hover">
                     <thead>
                         <tr >
+                            <td>Foto</td>
                             <td >Mascota</td>
                             <td>Ubicacion</td>
                             <td>Fecha publicacion</td>
-                            <td>Foto</td>
                             <td>observaciones</td>
                             <td>Operar</td>
                         <tr>
@@ -22,11 +22,10 @@
                     {% if object_list %}
                         {% for i in object_list %}
                             <tr>
-                                
+                                <td><img  style="height: 6em; width: 8em;" src="{{  i.id_mascota.fotos.url }}"/></td>
                                 <td>{{ i.id_mascota }}</td>
                                 <td>{{ i.condicion }}</td>
                                 <td>{{ i.fecha_publicacion }}</td>
-                                <td><img  style="height: 8em; width: 10em;" src="{{  i.id_mascota.fotos.url }}"/></td>
                                 <td>{{ i.observaciones }}</td>
                                 <td>
                                     <a class="btn btn-primary" href="{% url 'adopcion:adopcion_eliminar' i.id %}">Eliminar</a>
