--- a/apps/encontrados/templates/index_encontrados.html
+++ b/apps/encontrados/templates/index_encontrados.html
@@ -9,13 +9,18 @@
 <h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #e53e6a; color: #fff; margin: 0;">Encontrados o Avistados</h5>
 <section style="padding: 1em 2em;">
    <div style="display: flex; justify-content: space-between; padding-bottom: 1.5em; width: 100%;">
-      <a href="{% url 'encontrados:publicar' %}" class="get-started-btn scrollto" style="margin-left: 1em;">Publicar nuevo</a>
+      <!--a href="{% url 'encontrados:publicar' %}" class="get-started-btn scrollto" style="margin-left: 1em;">Publicar nuevo</a-->
       <form action="{% url 'encontrados:buscar' %}" method="GET" style="padding-right: 1em; display: flex;">
-         {% csrf_token %}
-         <input type="text" name="buscar" placeholder="Especie, Raza, Localidad, Barrio" class="form-control" style="margin-right: -20px;">
+         
+         {{search_form.as_p}}
+         <!--<input type="text" name="buscar" placeholder="Especie, Raza, Localidad, Barrio" class="form-control" style="margin-right: -20px;">-->
          <input type="submit" value="Buscar" class="btn get-started-btn scrollto">
+         
       </form>
+     
+
    </div>
+
    <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 1em; text-align: center; align-items: center; justify-content: center;">
       {% for publicacion in publicaciones %}
       <!-- <div>
@@ -28,6 +33,7 @@
          <a href="{% url 'editar_publicacion' publicacion.id %}"></a>
          {% endif %}
       </div> -->
+
       <div class="box" style="flex-basis: 15em;">
          <div class="container border" style="padding: 1em;">
             <div class="row" style="align-items: center; justify-content: center;">
@@ -42,8 +48,8 @@
                         <h4 style="font-size: 16px;">{{ publicacion.id_mascota.nombre }}</h4>
                      </div>
                         <div class="text">
-                        <span>{{ publicacion.id_ubicacion.localidad }}</span>
-                        <span>{{ publicacion.id_ubicacion.barrio }}</span>
+                           <span>{{ publicacion.id_ubicacion.localidad }}</span>
+                           <span>{{ publicacion.id_ubicacion.barrio }}</span>
                         </div>
                      <div style="display: flex; gap: 0.5em;">
                         <a href="#">Ver</a>
