--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -67,20 +67,14 @@
             <li class="dropdown"><a href="#"><span>Publicaciones</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="#">Perdidos</a></li>
-                <li><a href="{% url 'encontrados:lista_encontrados' %}">Encontrados</a></li>
+                <li><a href="{% url 'lista_encontrados' %}">Encontrados</a></li>
                 <li><a href="#">Adopción</a></li>
               </ul>
             </li>
             {% endif %}
 
             {% if user.is_authenticated %}
-            <li class="dropdown"><a href="#"><span>Suscripciones</span> <i class="bi bi-chevron-down"></i></a>
-              <ul>
-                <li><a href="#">Perdidos</a></li>
-                <li><a href="#">Encontrados</a></li>
-                <li><a href="#">Adopción</a></li>
-              </ul>
-            </li>
+            <li><a class="nav-link scrollto" href="{% url 'suscripciones_ver' %}">Suscripciones</a></li>              
             {% endif %}
 
             <li class="dropdown"><a href="#"><span> Nosotros</span> <i class="bi bi-chevron-down"></i></a>
