--- a/main/templates/consultas_encontrados.html
+++ b/main/templates/consultas_encontrados.html
@@ -20,9 +20,10 @@
             <h2>Consulta de Encontrados</h2>
             <p>Estas mascotas se encuentran sin Dueño, si las conoces, por favor avisá al dueño.</p>
         </div>
-      <div class="row">
+      
+       <div class="row">
         {% if lista_encontrados %} 
-      {% for xObj in lista_encontrados %}
+        {% for xObj in lista_encontrados %}
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
           <div class="member" data-aos="fade-up" data-aos-delay="10">
             <div class="member-img">
@@ -42,6 +43,7 @@
           <h4>No hay Publicaciones de Encontrados</h4>
           <p>Disculpe las molestias.</p>
       {%endif%}
+    </div>
 
     </section><!-- End Section -->
 
