--- a/apps/encontrados/templates/publicacion.html
+++ b/apps/encontrados/templates/publicacion.html
@@ -7,39 +7,34 @@
 <br>
 <br>
 <br>
-<div style="z-index: 100; position: fixed; top: 207px; left: 50%; transform: translateX(-50%);">
-   <a href="#"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
-   <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
-   <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
-</div>
 <div style="display: flex; justify-content: center; align-items: center; background-color: #1b1b1b; color: #fff; min-height: 100px;">
    <p style="font-size: xx-large;">{{ publicacion.id_mascota.nombre }}</p>
 </div>
-<section style="width: 100%; display: flex; justify-content: center; padding: 3em 0; background-color: #faeded;">
+<section style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 3em 0; background-color: #faeded;">
    <article style="width: 60%; padding: 35px 30px; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
-      <div style="display: flex; justify-content: space-between; padding-bottom: 0.5em;;">
-         <span>Localidad: {{ publicacion.id_ubicacion.localidad }}</span>
-         <span>Barrio: {{ publicacion.id_ubicacion.barrio }}</span>
-         <span>Fecha: {{ publicacion.fecha_evento }}</span>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Localidad: {{ publicacion.id_ubicacion.localidad }}</span>
+         <span style="padding-bottom: 1em;">Barrio: {{ publicacion.id_ubicacion.barrio }}</span>
+         <span style="padding-bottom: 1em;">Fecha: {{ publicacion.fecha_evento }}</span>
       </div>
-      <div style="display: flex; justify-content: space-between; padding-bottom: 0.5em;">
-         <span>Calle: {{ publicacion.id_ubicacion.calle }}</span>
-         <span>N&uacute;mero: {{ publicacion.id_ubicacion.numero }}</span>
-         <span>Entre calles: {{ publicacion.id_ubicacion.barrio }}</span>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Calle: {{ publicacion.id_ubicacion.calle }}</span>
+         <span style="padding-bottom: 1em;">N&uacute;mero: {{ publicacion.id_ubicacion.numero }}</span>
+         <span style="padding-bottom: 1em;">Entre calles: {{ publicacion.id_ubicacion.barrio }}</span>
       </div>
-      <div style="display: flex; justify-content: space-between; padding-bottom: 0.5em;">
-         <span>Especie: {{ publicacion.id_mascota.especie }}</span>
-         <span>Raza: {{ publicacion.id_mascota.raza }}</span>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Especie: {{ publicacion.id_mascota.especie }}</span>
+         <span style="padding-bottom: 1em;">Raza: {{ publicacion.id_mascota.raza }}</span>
       </div>
       <img src="{{ publicacion.id_mascota.fotos.url }}" alt="" style="max-width: 100%; width: auto; padding-bottom: 0.5em;">
       <p style="text-align: center; font-size: 20px;">Caracter&iacute;sticas</p>
-      <div style="display: flex; justify-content: space-between; padding-bottom: 0.5em;">
-         <span>Sexo: {{ publicacion.id_mascota.especie }}</span>
-         <span>Tamaño: {{ publicacion.id_mascota.raza }}</span>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Sexo: {{ publicacion.id_mascota.especie }}</span>
+         <span style="padding-bottom: 1em;">Tamaño: {{ publicacion.id_mascota.raza }}</span>
       </div>
-      <div style="display: flex; justify-content: space-between; padding-bottom: 0.5em;">
-         <span>Color: {{ publicacion.id_mascota.color }}</span>
-         <span>Edad: {{ publicacion.id_mascota.edad }}</span>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Color: {{ publicacion.id_mascota.color }}</span>
+         <span style="padding-bottom: 1em;">Edad: {{ publicacion.id_mascota.edad }}</span>
       </div>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_mascota.otro_dato }}</p>
       <p style="text-align: center; font-size: 20px;">Observaciones</p>
@@ -47,5 +42,10 @@
       <p style="text-align: center; font-size: 20px;">Referencias</p>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_ubicacion.otros_datos }}</p>
    </article>
+   <div style="margin-top: 1em;">
+      <a href="#"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
+      <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
+      <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
+   </div>
 </section>
 {% endblock %}
