--- a/apps/encontrados/templates/index_encontrados.html
+++ b/apps/encontrados/templates/index_encontrados.html
@@ -6,63 +6,79 @@
 <br>
 <br>
 <br>
-<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #e53e6a; color: #fff; margin: 0;">Encontrados o Avistados</h5>
+<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Encontrados o Avistados</h5>
 <section style="padding: 1em 2em;">
-   <div style="display: flex; justify-content: space-between; padding-bottom: 1.5em; width: 100%;">
-      <!--a href="{% url 'encontrados:publicar' %}" class="get-started-btn scrollto" style="margin-left: 1em;">Publicar nuevo</a-->
-      <form action="{% url 'encontrados:buscar' %}" method="GET" style="padding-right: 1em; display: flex;">
-         
-         {{search_form.as_p}}
-         <!--<input type="text" name="buscar" placeholder="Especie, Raza, Localidad, Barrio" class="form-control" style="margin-right: -20px;">-->
-         <input type="submit" value="Buscar" class="btn get-started-btn scrollto">
-         
-      </form>
-     
-
-   </div>
-
-   <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 1em; text-align: center; align-items: center; justify-content: center;">
-      {% for publicacion in publicaciones %}
-      <!-- <div>
-         <img src="{{ publicacion.id_mascota.fotos.url }}" alt="">
-         <h6>{{ publicacion.id_mascota.nombre }}</h6>
-         <span>{{ publicacion.fecha_publicacion }}</span>
-         <span>{{ publicacion.id_mascota.raza }}</span>
-         <span>{{ publicacion.id_mascota.sexo }}</span>
-         {% if request.user.id == publicacion.id_usuario.id %}
-         <a href="{% url 'editar_publicacion' publicacion.id %}"></a>
-         {% endif %}
-      </div> -->
-
-      <div class="box" style="flex-basis: 15em;">
-         <div class="container border" style="padding: 1em;">
-            <div class="row" style="align-items: center; justify-content: center;">
+   <div class="row">
+      <div class="col-md-2">
+         <div style="display: flex; justify-content: space-between; padding-bottom: 1.5em; width: 100%;">
+            <!--a href="{% url 'encontrados:publicar' %}" class="get-started-btn scrollto" style="margin-left: 1em;">Publicar nuevo</a-->
+            <form action="{% url 'encontrados:buscar' %}" method="GET" role= "form" style="padding-right: 1em; display: flex-column;  " >
                
-               <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="width: 100%;">
-                  
-                  <div class="box-part text-center" style="display: flex;flex-direction: column; align-items: center; justify-content: center;">
-                     <div style="display: flex; position: relative;">
-                        <img src="{{ publicacion.id_mascota.fotos.url }}" alt="" style="object-fit: contain; width: 100%;">
-                     </div>    
-                     <div class="title">
-                        <h4 style="font-size: 16px;">{{ publicacion.id_mascota.nombre }}</h4>
-                     </div>
-                        <div class="text">
-                           <span>{{ publicacion.id_ubicacion.localidad }}</span>
-                           <span>{{ publicacion.id_ubicacion.barrio }}</span>
-                        </div>
-                     <div style="display: flex; gap: 0.5em;">
-                        <a href="#">Ver</a>
-                        {% if request.user.id == publicacion.id_usuario.id %}
-                        <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}">Editar</a>
-                        {% endif %}     
-                     </div>
-                  </div>
-               </div>	 
-            </div>		
+               <!--{{search_form.as_p}}-->
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.orden.label}} {{search_form.orden}}
+               </div>
+               
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.barrio.label}} {{search_form.barrio}}
+               </div>
+               
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.especie.label}} {{search_form.especie}}
+               </div>
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.localidad.label}} {{search_form.localidad}}
+               </div>
+               <!--<input type="text" name="buscar" placeholder="Especie, Raza, Localidad, Barrio" class="form-control" style="margin-right: -20px;">-->
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  <input type="submit" value="Buscar" class="btn get-started-btn scrollto" >
+               </div>
+               
+               
+            </form>  
+
          </div>
       </div>
-      {% endfor %}
+      <div class="col-md-10">>
+         <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 1em; text-align: center; align-items: center; justify-content: center;">
+            {% for publicacion in publicaciones %}
+                  
+            <div class="box" style="flex-basis: 15em; height: 25em;">
+            
+               <div class="container border" style="padding: 1em; height: 100%;">
+                  
+                  <div class="row" style="align-items: center; justify-content: center;">
+                     
+                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="width: 100%;">
+                        
+                        <div class="box-part text-center" style="display: flex;flex-direction: column; align-items: center; justify-content: center; height: 80%;">
+                           <div style="display: flex; position: relative;">
+                              <img src="{{ publicacion.id_mascota.fotos.url }}" alt="" style="object-fit: contain; width: 100%; height: 18em;">
+                           </div>    
+                           <div class="title">
+                              <h4 style="font-size: 14px;">{{ publicacion.id_mascota.nombre }}</h4>
+                           </div>
+                              <div class="text" style="font-size: 12px;">
+                                 <span>Loc: {{ publicacion.id_ubicacion.localidad }}</span>
+                                 <span>-Barrio: {{ publicacion.id_ubicacion.barrio }}</span>
+                              </div>
+                              <div class="text" style="font-size: 12px;">
+                                 <span>Fecha evento: {{publicacion.fecha_evento}}</span>
+                              </div>
+                           <div style="display: flex; gap: 0.5em; font-size: 12px;" >
+                              <a href="#">Ver</a>
+                              {% if request.user.id == publicacion.id_usuario.id %}
+                                 <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}">Editar</a>
+                              {% endif %}     
+                           </div>
+                        </div>
+                     </div>	 
+                  </div>		
+               </div>
+            </div>
+            {% endfor %}
+         </div>
+      </div>
    </div>
 </section>
 {% endblock %}
