--- a/apps/encontrados/templates/publicacion.html
+++ b/apps/encontrados/templates/publicacion.html
@@ -42,10 +42,12 @@
       <p style="text-align: center; font-size: 20px;">Referencias</p>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_ubicacion.otros_datos }}</p>
    </article>
+   {% if user.is_authenticated %}
    <div style="margin-top: 1em;">
       <a href="#"><img src="https://img.icons8.com/small/24/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
       <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/edit-property.png" title="Editar"/></a>
       <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/24/000000/trash--v1.png" title="Borrar"/></a>
    </div>
+   {% endif %}
 </section>
 {% endblock %}
