--- a/apps/encontrados/templates/lista_encontrados.html
+++ b/apps/encontrados/templates/lista_encontrados.html
@@ -33,7 +33,9 @@
       
       <div class="container" style="padding: 1em;">
          <div style="position: relative; display: flex; flex-direction: row; justify-content: flex-end; gap: 5px;">
-            <a href="#" style="z-index: 100; position: absolute; top: 0; left: 0;"><img src="https://img.icons8.com/small/16/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
+            {% if fecha_actual > publicacion.valido_hasta %}
+            <a href="{% url 'encontrados:renovar_publicacion' publicacion.id %}" style="z-index: 100; position: absolute; top: 0; left: 0;"><img src="https://img.icons8.com/small/16/000000/recurring-appointment.png" title="¿Renovar vigencia?"/></a>
+            {% endif %}
             <a href="{% url 'encontrados:editar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/16/000000/edit-property.png" title="Editar"/></a>
             <a href="{% url 'encontrados:eliminar_publicacion' publicacion.id %}"><img src="https://img.icons8.com/small/16/000000/trash--v1.png" title="Borrar"/></a>
          </div>
