--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -57,8 +57,8 @@
     
             <li class="dropdown"><a href="#"><span> Consultas </span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="{% url 'consultas_perdidos' %}">Perdidos</a></li>
-                <li><a href="{% url 'consultas_encontrados' %}">Encontrados</a></li>
+                <li><a href="{% url 'perdidos:buscar_perdidos' %}">Perdidos</a></li>
+                <li><a href="{% url 'encontrados:buscar' %}">Encontrados</a></li>
                 <li><a href="{% url 'adopcion:inicio' %}">Adopciones</a></li>
               </ul>
             </li>
