--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -57,8 +57,8 @@
     
             <li class="dropdown"><a href="#"><span> Consultas </span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="{% url 'consultas_perdidos' %}">Perdidos</a></li>
-                <li><a href="{% url 'consultas_encontrados' %}">Encontrados</a></li>
+                <li><a href="#">Perdidos</a></li>
+                <li><a href="#">Encontrados</a></li>
                 <li><a href="#">Adopciones</a></li>
               </ul>
             </li>
@@ -74,7 +74,7 @@
             {% endif %}
 
             {% if user.is_authenticated %}
-            <li><a class="nav-link scrollto" href="{% url 'suscripciones_ver' %}">Suscripciones</a></li>              
+            <li><a class="nav-link scrollto" href="{% url 'suscripciones_ver'%}">Suscripciones</a></li>              
             {% endif %}
 
             <li class="dropdown"><a href="#"><span> Nosotros</span> <i class="bi bi-chevron-down"></i></a>
@@ -168,7 +168,7 @@
           &copy; Copyright <strong><span>Amada Mascota</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="{% url 'about' %}#team">Zoe, Enzo, Franco, Mimi, Magui, David</a>
+          Designed by <a href="{% url 'about' %}#team">Zoe, Enzo, Franco, Noemí, Magdalena</a>
         </div>
       </div>
 
