--- a/main/templates/suscripcion_publicacionVer.html
+++ b/main/templates/suscripcion_publicacionVer.html
@@ -2,23 +2,10 @@
 
 {% block content %}
 
-<style>
-   #barra{
-       margin: 2;
-       padding: 1em;;
-       list-style: none;
-       text-transform: capitalize;
-   }
-
-   #barra li{
-       margin:0 0.5em;
-   }
-</style>
-
 <head>
    {# el título aparece en la Barra de Título del Navegador #}
    {% block title %}
-       Consultar Perdidos
+        Suscripciones-Ver
    {% endblock %}
 </head>
 
@@ -26,8 +13,8 @@
    <section >
        <div class="container-fluid" data-aos="fade-up">
            <header2 class="section-title">
-               <h2>Suscripciones a Notificación</h2>
-               <p>Para recibir novedades de las últimas publicaciones de mascotas Perdias, Encontradas y/o en Adopción, Suscríbete!</p>
+               <h2>Suscripciones a Publicaciones</h2>
+               <p>Para recibir novedades de las últimas publicaciones de mascotas Perdidas, Encontradas y/o en Adopción, Suscríbete!</p>
            </header2>
        </div>
 
@@ -63,7 +50,6 @@
                                 <span><br>Fecha Desde: {{ xObj.fecha_desde}} </span>
                                 <span><br>Fecha Hasta: {{ xObj.fecha_hasta }} </span>
                             </h7>
-
                             </div>
                         </div>
                     </div>
