--- a/main/templates/suscripcion_publicaciones.html
+++ b/main/templates/suscripcion_publicaciones.html
@@ -6,7 +6,7 @@
 <head>
    {# el título aparece en la Barra de Título del Navegador #}
    {% block title %}
-       Consultar Perdidos
+      Suscripciones-Suscribirse
    {% endblock %}
 </head>
 
@@ -14,7 +14,7 @@
    <section >
        <div class="container-fluid" data-aos="fade-up">
            <header2 class="section-title">
-               <h2>Suscripciones a Notificación</h2>
+               <h2>Suscripciones a Publicaciones</h2>
                <p>Para recibir novedades de las últimas publicaciones de mascotas Perdias, Encontradas y/o en Adopción, Suscríbete!</p>
            </header2>
        </div>
