--- a/apps/adopcion/templates/index.html
+++ b/apps/adopcion/templates/index.html
@@ -17,6 +17,7 @@
               <h3>Buscar</h3>
               <div class="btn-wrap">
                 <a href=""class="btn-buy">Buscar</a>
+                {# {% url 'adopcion:buscar_a' %} #}
               </div>
             </div>
           </div>
