--- a/apps/encontrados/templates/index_encontrados.html
+++ b/apps/encontrados/templates/index_encontrados.html
@@ -5,9 +5,13 @@
 {% block content %}
 <br>
 <br>
-<br>
-<h5 style="text-align: center; font: 900 32px bold;padding: 1.5em 0; background-color: #1b1b1b; color: #fff; margin: 0;">Encontrados o Avistados</h5>
-<section style="padding: 1em 2em;">
+<div class="container-fluid" data-aos="fade-up">
+   <div class="section-title" style= "color: #fff; background-color: #1b1b1b;">
+      <h5 style="text-align: center; font: 900 32px bold; padding: 1.5em  ; margin: 0">Consulta Encontrados</h5>
+      <p style="text-align: center;" >Estas mascotas se encuentran sin Dueño, si las conoces, por favor avisá al dueño.</p>
+   </div>
+</div>
+<section style="padding: 1em 2em; background-color:#faeded;">
    <div class="row">
       <div class="col-md-2">
          <div style="display: flex; justify-content: space-between; padding-bottom: 1.5em; width: 100%;">
